@@ -26,9 +26,9 @@
         <flyway.version>9.22.3</flyway.version>
         <eperusteet.amosaa.resources>fi.vm.sade.eperusteet.amosaa.resource</eperusteet.amosaa.resources>
         <swagger-maven-plugin-version>3.1.7</swagger-maven-plugin-version>
-        <java.release.version>11</java.release.version>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <java.release.version>17</java.release.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <eperusteet.backend-utils.version>2.5</eperusteet.backend-utils.version>
         <org.apache.tomcat.version>9.0.90</org.apache.tomcat.version>
         <spring.security.test.version>5.7.11</spring.security.test.version>
@@ -36,6 +36,7 @@
         <springfox.version>2.7.0</springfox.version>
         <jacoco.version>0.8.12</jacoco.version>
         <postgresql.version>42.5.5</postgresql.version>
+        <lombok.version>1.18.34</lombok.version>
     </properties>
 
     <dependencies>
@@ -299,7 +300,7 @@
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjtools</artifactId>
-            <version>1.9.19</version>
+            <version>1.9.22.1</version>
         </dependency>
         <dependency>
             <groupId>org.jasig.cas.client</groupId>
@@ -484,7 +485,10 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <jvmArguments>-Dfile.encoding=UTF8</jvmArguments>
+                    <jvmArguments>
+                        -Dfile.encoding=UTF8
+                        --add-opens=java.base/java.lang=ALL-UNNAMED
+                    </jvmArguments>
                 </configuration>
             </plugin>
             <!-- Maven rikkoo muuten ttf fontit -->
@@ -782,14 +786,28 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
                         <configuration>
-                            <argLine>-Dlog4j2.level=OFF -Xmx2048m -XX:+CMSClassUnloadingEnabled -javaagent:${settings.localRepository}/org/jacoco/org.jacoco.agent/${jacoco.version}/org.jacoco.agent-${jacoco.version}-runtime.jar=destfile=${project.build.directory}/jacoco-it.exec</argLine>
+                            <argLine>
+                                -Dlog4j2.level=OFF
+                                -javaagent:${settings.localRepository}/org/jacoco/org.jacoco.agent/${jacoco.version}/org.jacoco.agent-${jacoco.version}-runtime.jar=destfile=${project.build.directory}/jacoco-it.exec
+                                --add-opens=java.base/java.lang=ALL-UNNAMED
+                            </argLine>
+                            <includes>
+                                <include>**/*IT.java</include>
+                            </includes>
                         </configuration>
                     </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
-                            <argLine>-Dlog4j2.level=OFF -javaagent:${settings.localRepository}/org/jacoco/org.jacoco.agent/${jacoco.version}/org.jacoco.agent-${jacoco.version}-runtime.jar=destfile=${project.build.directory}/jacoco-ut.exec</argLine>
+                            <argLine>
+                                -Dlog4j2.level=OFF
+                                -javaagent:${settings.localRepository}/org/jacoco/org.jacoco.agent/${jacoco.version}/org.jacoco.agent-${jacoco.version}-runtime.jar=destfile=${project.build.directory}/jacoco-ut.exec
+                                --add-opens=java.base/java.lang=ALL-UNNAMED
+                            </argLine>
+                            <excludes>
+                                <exclude>**/*IT.java</exclude>
+                            </excludes>
                         </configuration>
                     </plugin>
                 </plugins>
